fixed image layout issue on ipad

--- a/pages/mlbVis/index.module.css
+++ b/pages/mlbVis/index.module.css
@@ -126,3 +126,7 @@
 .skeleton > * {
     height: 100%;
 }
+
+.postImage {
+    width: 100%;
+}
